9f488739dde37bf6d54b7cd1e8b49869dd841d0d Fix: Resolve layout issues with Semantic UI and DataTables 2
Sync to source repo @9f488739dde37bf6d54b7cd1e8b49869dd841d0d

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -189,6 +189,7 @@ div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dts
   vertical-align: middle;
   white-space: nowrap;
   flex-grow: 1;
+  text-align: left;
 }
 div.dtsp-panesContainer div.dataTables_wrapper div.dataTables_scrollBody div.dtsp-nameCont span.dtsp-pill {
   display: inline-block;
